fix intro slide being in flow but invisible, relative image links

--- a/root-src/scss/_default.scss
+++ b/root-src/scss/_default.scss
@@ -121,11 +121,6 @@ html,body {
   -webkit-overflow-scrolling: touch;
   transform: scale(1) translateX(0);
   transition: transform 500ms, opacity 500ms;
-  &--background {
-    opacity: 0;
-    transform: scale(0.5) translateX(0);
-    z-index: 1;
-  }
   &--in {
     transform: scale(1) translateX(100%);
     z-index: 3;
@@ -186,6 +181,12 @@ html,body {
     align-items: center;
     justify-content: center;
     z-index: 5;
+    &--out {
+      opacity: 0;
+      z-index: -1;
+      transition: opacity 400ms, z-index;
+      transition-delay: 0ms, 400ms;
+    }
   }
 }
 
